Fix scrollbar bug

--- a/src/style/src/reset.css
+++ b/src/style/src/reset.css
@@ -32,7 +32,8 @@ input {
 }
 
 ::-webkit-scrollbar {
-    height: 12px;
+    height: 10px;
+    width: 10px;
 }
 ::-webkit-scrollbar-thumb {
     background-color: #2d5894; 
